--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -179,7 +179,8 @@
         <app-debt-summary
           *ngIf="scheduleType === 'sched_d_ds'"
           [forceChangeDetection]="forceChangeDetectionDebtSummary"
-          [transactionType]="transactionType"
+          [transactionType]="transactionTypeDebtSummary"
+          [transactionTypeText]="transactionTypeTextDebtSummary"
           (status)="onNotify($event)">          
         </app-debt-summary>
 
