--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -446,20 +446,27 @@
             <i class="plus-icon-circle" aria-hidden="true"></i>
             Add {{ subTransactionInfo.subTransactionTypeDescription }}
           </button>
+          <button *ngIf="subTransactionInfo?.isParent && multipleSubTransactionInfo
+              && multipleSubTransactionInfo?.length > 0 && transactionType === 'DEBT_BY_VENDOR'" 
+            class="btn btn-primary btn-left"
+            (click)="saveForAddMemoSub(multipleSubTransactionInfo[0])">
+            <i class="plus-icon-circle" aria-hidden="true"></i>
+            Make a Payment on Debt
+          </button>          
           <div [ngStyle]="{'min-height': memoDropdownSize}" style="height: auto">
-            <div *ngIf="subTransactionInfo?.isParent && multipleSubTransactionInfo" ngbDropdown class="d-inline-block"
+            <div *ngIf="subTransactionInfo?.isParent && multipleSubTransactionInfo
+                && transactionType !== 'DEBT_BY_VENDOR'" 
+              ngbDropdown class="d-inline-block"
               placement="bottom-left" (openChange)="multipleMemoDropdownChanged($event)">
               <button class="btn btn-primary dropdown-toggle" id="jfMemoDropdown" ngbDropdownToggle>
                 <i class="plus-icon-circle" aria-hidden="true"></i>
                 <ng-container 
                   *ngIf="
-                    transactionType === 'DEBT_TO_VENDOR' ||
-                    transactionType === 'DEBT_BY_VENDOR';
+                    transactionType === 'DEBT_TO_VENDOR';
                     else jfTransferMemo">
                   Make a Payment on Debt
                 </ng-container>
                 <ng-template #jfTransferMemo>Add JF Transfer Memo</ng-template>
-                
                 <i class="dropdown-icon" aria-hidden="true"></i>
               </button>
               <div ngbDropdownMenu aria-labelledby="jfMemoDropdown" id="jfMemoDropdown-menu">
