--- a/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
+++ b/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
@@ -46,9 +46,7 @@
       <thead>
         <tr>
           <th class="transactions__table-checkbox">
-            <div *ngIf="editMode">
-              <input [@fadeInOut] [(ngModel)]="allTransactionsSelected" type="checkbox" (change)="changeAllTransactionsSelected()">
-            </div>
+            <input [@fadeInOut] [(ngModel)]="allTransactionsSelected" type="checkbox" (change)="changeAllTransactionsSelected()">
           </th>
           <th [@fadeInOut] *ngIf="_allTransactions" [class]="getSortClass('reportType')" (click)="changeSortDirection('reportType')">Report Type
           </th>
@@ -164,35 +162,35 @@
               {{trx.aggregate | currency:'USD':'symbol-narrow':'1.2-2'}}
             <td>
               <div [@fadeInOut] *ngIf="isRecycleBinViewActive()">
-                <span [title]="!trx.isEditable ? 'This transaction cannot be restored because it is auto generated.': ''">
-                  <button class="btn btn-sm btn-primary" [disabled]="!trx.isEditable" (click)="restoreTransaction(trx)">
+                <span [title]="!trx.iseditable ? 'This transaction cannot be restored because it is auto generated.': ''">
+                  <button class="btn btn-sm btn-primary" [disabled]="!trx.iseditable" (click)="restoreTransaction(trx)">
                     <i class="undo-icon"></i>
                   </button>
                 </span>
               </div>
-              <div *ngIf="editMode">
+              <div *ngIf="!_allTransactions || (_allTransactions && trx.reportstatus !== 'Filed')">
                 <div [@fadeInOut] *ngIf="isTransactionViewActive()" class="btn-group" ngbDropdown role="group"
                   aria-label="Action dropdown">
                   <button class="btn btn-sm btn-primary" ngbDropdownToggle>
                     <i class="ellipsis-icon"></i>
                   </button>
                   <div id="transactions__dropdown-action" class="dropdown-menu" ngbDropdownMenu>
-                    <span [title]="!trx.isEditable ? 'This transaction cannot be edited because it is auto generated.':''">
-                      <button [disabled]="!trx.isEditable" class="dropdown-item" (click)="editTransaction(trx)">
+                    <span [title]="!trx.iseditable ? 'This transaction cannot be edited because it is auto generated.':''">
+                      <button [disabled]="!trx.iseditable" class="dropdown-item" (click)="editTransaction(trx)">
                         <i class="edit-icon"></i> Edit
                       </button>
                     </span>
                     <button class="dropdown-item" (click)="printTransaction(trx)">
                       <i class="fas fa-print"></i> Print
                     </button>
-                    <span [title]="!trx.isEditable ? 'This transaction cannot be cloned because it is auto generated.':''">
-                      <button [disabled]="!trx.isEditable" class="dropdown-item" (click)="cloneTransaction(trx)">
+                    <span [title]="!trx.iseditable ? 'This transaction cannot be cloned because it is auto generated.':''">
+                      <button [disabled]="!trx.iseditable" class="dropdown-item" (click)="cloneTransaction(trx)">
                         <i class="far fa-copy"></i> Clone
                       </button>
                     </span>
-                    <span [title]="!trx.isEditable ? 'This transaction cannot be deleted because it is auto generated.': 
+                    <span [title]="!trx.iseditable ? 'This transaction cannot be deleted because it is auto generated.': 
                     trx.child ? 'This transaction cannot be deleted because of the linked sub transactions.':''">
-                      <button [disabled]="trx.child || !trx.isEditable? true:false" *ngIf="checkIfTrashable()" class="dropdown-item"
+                      <button [disabled]="trx.child || !trx.iseditable? true:false" *ngIf="checkIfTrashable()" class="dropdown-item"
                         (click)="trashTransaction(trx)">
                         <i class="trash-icon"></i> Trash
                       </button>
@@ -200,7 +198,7 @@
                   </div>
                 </div>
               </div>
-              <div *ngIf="!editMode">
+              <div *ngIf="_allTransactions && trx.reportstatus === 'Filed'">
                 <button class="btn btn-sm btn-primary" (click)="checkIfEditMode()">
                   <i class="ellipsis-icon"></i>
                 </button>
@@ -237,7 +235,7 @@
                   <i class="undo-icon"></i>
                 </button>
               </div>
-              <div *ngIf="editMode">
+              <div *ngIf="!_allTransactions || (_allTransactions && trxChild.reportstatus !== 'Filed')">
                 <div [@fadeInOut] *ngIf="isTransactionViewActive()" class="btn-group" ngbDropdown role="group"
                   aria-label="Action dropdown">
                   <button class="btn btn-sm btn-primary" ngbDropdownToggle>
@@ -259,7 +257,7 @@
                   </div>
                 </div>
               </div>
-              <div *ngIf="!editMode">
+              <div *ngIf="_allTransactions && trx.reportstatus === 'Filed'">
                 <button class="btn btn-sm btn-primary" (click)="checkIfEditMode()">
                   <i class="ellipsis-icon"></i>
                 </button>
@@ -435,35 +433,35 @@
               <td [@fadeInOut] *ngIf="isColumnVisible('electionYear')">{{trx.electionYear}}</td>
               <td>
                 <div [@fadeInOut] *ngIf="isRecycleBinViewActive()">
-                  <span [title]="!trx.isEditable ? 'This transaction cannot be restored because it is auto generated.': ''">
-                    <button class="btn btn-sm btn-primary" [disabled]="!trx.isEditable" (click)="restoreTransaction(trx)">
+                  <span [title]="!trx.iseditable ? 'This transaction cannot be restored because it is auto generated.': ''">
+                    <button class="btn btn-sm btn-primary" [disabled]="!trx.iseditable" (click)="restoreTransaction(trx)">
                       <i class="undo-icon"></i>
                     </button>
                   </span>
                 </div>
-                <div *ngIf="editMode">
+                <div *ngIf="!_allTransactions || (_allTransactions && trx.reportstatus !== 'Filed')">
                   <div [@fadeInOut] *ngIf="isTransactionViewActive()" class="btn-group" ngbDropdown role="group"
                     aria-label="Action dropdown">
                     <button class="btn btn-sm btn-primary" ngbDropdownToggle>
                       <i class="ellipsis-icon"></i>
                     </button>
                     <div id="transactions__dropdown-action" class="dropdown-menu" ngbDropdownMenu>
-                      <span [title]="!trx.isEditable ? 'This transaction cannot be edited because it is autogenerated.':''">
-                        <button [disabled]="!trx.isEditable" class="dropdown-item" (click)="editTransaction(trx)">
+                      <span [title]="!trx.iseditable ? 'This transaction cannot be edited because it is autogenerated.':''">
+                        <button [disabled]="!trx.iseditable" class="dropdown-item" (click)="editTransaction(trx)">
                           <i class="edit-icon"></i> Edit
                         </button>
                       </span>
                       <button class="dropdown-item" (click)="printTransaction(trx)">
                         <i class="fas fa-print"></i> Print
                       </button>
-                      <span [title]="!trx.isEditable ? 'This transaction cannot be cloned because it is autogenerated.':''">
-                        <button class="dropdown-item" [disabled]="!trx.isEditable" (click)="cloneTransaction(trx)">
+                      <span [title]="!trx.iseditable ? 'This transaction cannot be cloned because it is autogenerated.':''">
+                        <button class="dropdown-item" [disabled]="!trx.iseditable" (click)="cloneTransaction(trx)">
                           <i class="far fa-copy"></i> Clone
                         </button>
                       </span>
-                      <span [title]="!trx.isEditable ? 'This transaction cannot be deleted because it is auto generated.': 
+                      <span [title]="!trx.iseditable ? 'This transaction cannot be deleted because it is auto generated.': 
                     trx.child ? 'This transaction cannot be deleted because of the linked sub transactions.':''">
-                        <button [disabled]="trx.child || !trx.isEditable ? true:false" *ngIf="checkIfTrashable()" 
+                        <button [disabled]="trx.child || !trx.iseditable ? true:false" *ngIf="checkIfTrashable()" 
                         class="dropdown-item"
                           (click)="trashTransaction(trx)">
                           <i class="trash-icon"></i> Trash
@@ -472,7 +470,7 @@
                     </div>
                   </div>
                 </div>
-                <div *ngIf="!editMode">
+                <div *ngIf="_allTransactions && trx.reportstatus === 'Filed'">
                   <button class="btn btn-sm btn-primary" (click)="checkIfEditMode()">
                     <i class="ellipsis-icon"></i>
                   </button>
@@ -508,7 +506,7 @@
                     <i class="undo-icon"></i>
                   </button>
                 </div>
-                <div *ngIf="editMode">
+                <div *ngIf="!_allTransactions || (_allTransactions && trxChild.reportstatus !== 'Filed')">
                   <div [@fadeInOut] *ngIf="isTransactionViewActive()" class="btn-group" ngbDropdown role="group"
                     aria-label="Action dropdown">
                     <button class="btn btn-sm btn-primary" ngbDropdownToggle>
@@ -530,7 +528,7 @@
                     </div>
                   </div>
                 </div>
-                <div *ngIf="!editMode">
+                <div *ngIf="_allTransactions && trx.reportstatus === 'Filed'">
                   <button class="btn btn-sm btn-primary" (click)="checkIfEditMode()">
                     <i class="ellipsis-icon"></i>
                   </button>
@@ -724,7 +722,7 @@
                     <i class="undo-icon"></i>
                   </button>
                 </div>
-                <div *ngIf="editMode">
+                <div *ngIf="!_allTransactions || (_allTransactions && trx.reportstatus !== 'Filed')">
                   <div [@fadeInOut] *ngIf="isTransactionViewActive()" class="btn-group" ngbDropdown role="group"
                     aria-label="Action dropdown">
                     <button class="btn btn-sm btn-primary" ngbDropdownToggle>
@@ -752,7 +750,7 @@
                     </div>
                   </div>
                 </div>
-                <div *ngIf="!editMode">
+                <div *ngIf="_allTransactions && trx.reportstatus === 'Filed'">
                   <button class="btn btn-sm btn-primary" (click)="checkIfEditMode()">
                     <i class="ellipsis-icon"></i>
                   </button>
