--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -87,7 +87,8 @@
       <div class="form__step" [hidden]="step !== 'step_3'">
         <div [hidden]="transactionType === 'ALLOC_H4_TYPES' || transactionType === 'ALLOC_H4_SUM'
          || transactionType === 'ALLOC_H6_TYPES' || transactionType === 'ALLOC_H6_SUM'
-         || transactionType === 'LA_ENTRY' || transactionType === 'LB_ENTRY'">
+         || transactionType === 'LA_ENTRY' || transactionType === 'LB_ENTRY' 
+         || transactionType === 'LA_SUM' || transactionType === 'LB_SUM'">
           <f3x-individual-receipt
             [hidden]="
               scheduleType !== 'sched_a' &&
@@ -237,7 +238,8 @@
         >
         </app-sched-h6>
         <app-sched-l
-          [hidden]="transactionType !== 'LA_ENTRY' && transactionType !== 'LB_ENTRY'"
+          [hidden]="transactionType !== 'LA_ENTRY' && transactionType !== 'LB_ENTRY' && 
+          transactionType !== 'LA_SUM' && transactionType !== 'LB_SUM'"
           [transactionTypeText]="transactionTypeText"
           [transactionType]="transactionType"
           [scheduleAction]="scheduleAction"
