--- a/front-end/src/app/forms/sched-l/sched-l.component.html
+++ b/front-end/src/app/forms/sched-l/sched-l.component.html
@@ -60,7 +60,7 @@
             </thead>
             <tbody>
               <tr>               
-                <td class="summary_text_level_3" id="LEVIN_INDV_REC" (click)="selectTypeChange($event)">
+                <td class="summary_text_level_3" id="LEVIN_INDV_REC" (click)="selectTypeChange('LEVIN_INDV_REC')">
                   <input type="radio" formControlName="type" value="LEVIN_INDV_REC" placeholder="Individual Receipt">
                   <label for="LEVIN_INDV_REC" class="child-options-label">Individual Receipt</label>
                   <button type="button" class="btn btn-info" ngbTooltip="Language will be provided by RAD"
@@ -71,7 +71,7 @@
                 </td>                
               </tr>
               <tr>                
-                <td class="summary_text_level_3" id="LEVIN_ORG_REC" (click)="selectTypeChange($event)">
+                <td class="summary_text_level_3" id="LEVIN_ORG_REC" (click)="selectTypeChange('LEVIN_ORG_REC')">
                   <input type="radio" formControlName="type" value="LEVIN_ORG_REC" placeholder="Business Receipt">
                   <label for="LEVIN_ORG_REC" class="child-options-label">Business Receipt</label>
                   <button type="button" class="btn btn-info" ngbTooltip="Language will be provided by RAD"
@@ -82,7 +82,7 @@
                 </td>                
               </tr>
               <tr>                
-                <td class="summary_text_level_3" id="LEVIN_PARTN_REC" (click)="selectTypeChange($event)">                
+                <td class="summary_text_level_3" id="LEVIN_PARTN_REC" (click)="selectTypeChange('LEVIN_PARTN_REC')">                
                   <input type="radio" formControlName="type" value="LEVIN_PARTN_REC" placeholder="Partnership Receipt"> 
                   <label for="LEVIN_PARTN_REC" class="child-options-label">Partnership Receipt</label>
                   <button type="button" class="btn btn-info" ngbTooltip="Language will be provided by RAD"
@@ -104,7 +104,7 @@
                 </td>                
               </tr>-->
               <tr>                
-                <td class="summary_text_level_3" id="LEVIN_PAC_REC" (click)="selectTypeChange($event)">
+                <td class="summary_text_level_3" id="LEVIN_PAC_REC" (click)="selectTypeChange('LEVIN_PAC_REC')">
                   <input type="radio" formControlName="type" value="LEVIN_PAC_REC" placeholder="PAC Receipt">
                   <label for="LEVIN_PAC_REC" class="child-options-label">PAC Receipt</label>
                   <button type="button" class="btn btn-info" ngbTooltip="Language will be provided by RAD"
@@ -115,7 +115,7 @@
                 </td>                
               </tr>
               <tr>                
-                <td class="summary_text_level_3" id="LEVIN_NON_FED_REC" (click)="selectTypeChange($event)">
+                <td class="summary_text_level_3" id="LEVIN_NON_FED_REC" (click)="selectTypeChange('LEVIN_NON_FED_REC')">
                   <input type="radio" formControlName="type" value="LEVIN_NON_FED_REC" placeholder="Non-Federal PAC Receipt">
                   <label for="LEVIN_NON_FED_REC" class="child-options-label">Non-Federal PAC Receipt</label>
                   <button type="button" class="btn btn-info" ngbTooltip="Language will be provided by RAD"
@@ -126,7 +126,7 @@
                 </td>                
               </tr>
               <tr>                
-                <td class="summary_text_level_3" id="LEVIN_TRIB_REC" (click)="selectTypeChange($event)">
+                <td class="summary_text_level_3" id="LEVIN_TRIB_REC" (click)="selectTypeChange('LEVIN_TRIB_REC')">
                   <input type="radio" formControlName="type" value="LEVIN_TRIB_REC" placeholder="Tribal Receipt">
                   <label for="LEVIN_TRIB_REC" class="child-options-label">Tribal Receipt</label>
                   <button type="button" class="btn btn-info" ngbTooltip="Language will be provided by RAD"
@@ -137,7 +137,7 @@
                 </td>                
               </tr>
               <tr>                
-                <td class="summary_text_level_3" id="LEVIN_OTH_REC" (click)="selectTypeChange($event)">
+                <td class="summary_text_level_3" id="LEVIN_OTH_REC" (click)="selectTypeChange('LEVIN_OTH_REC')">
                   <input type="radio" formControlName="type" value="LEVIN_OTH_REC" placeholder="Other Receipt">
                   <label for="LEVIN_OTH_REC" class="child-options-label">Other Receipt</label>
                   <button type="button" class="btn btn-info" ngbTooltip="Language will be provided by RAD"
@@ -182,7 +182,7 @@
             </thead>
             <tbody>
               <tr>               
-                <td class="summary_text_level_3" id="LEVIN_VOTER_REG" (click)="selectTypeChange($event)">
+                <td class="summary_text_level_3" id="LEVIN_VOTER_REG" (click)="selectTypeChange('LEVIN_VOTER_REG')">
                   <input type="radio" formControlName="type" value="LEVIN_VOTER_REG" placeholder="Voter Registration">
                   <label for="LEVIN_VOTER_REG" class="child-options-label">Voter Registration</label>
                   <button type="button" class="btn btn-info" ngbTooltip="Language will be provided by RAD"
@@ -193,7 +193,7 @@
                 </td>                
               </tr>
               <tr>                
-                <td class="summary_text_level_3" id="LEVIN_VOTER_ID" (click)="selectTypeChange($event)">
+                <td class="summary_text_level_3" id="LEVIN_VOTER_ID" (click)="selectTypeChange('LEVIN_VOTER_ID')">
                   <input type="radio" formControlName="type" value="LEVIN_VOTER_ID" placeholder="Voter ID">
                   <label for="LEVIN_VOTER_ID" class="child-options-label">Voter ID</label>
                   <button type="button" class="btn btn-info" ngbTooltip="Language will be provided by RAD"
@@ -204,7 +204,7 @@
                 </td>                
               </tr>
               <tr>                
-                <td class="summary_text_level_3" id="LEVIN_GOTV" (click)="selectTypeChange($event)">                
+                <td class="summary_text_level_3" id="LEVIN_GOTV" (click)="selectTypeChange('LEVIN_GOTV')">                
                   <input type="radio" formControlName="type" value="LEVIN_GOTV" placeholder="Get out the Vote (GOTV)"> 
                   <label for="LEVIN_GOTV" class="child-options-label">Get out the Vote (GOTV)</label>
                   <button type="button" class="btn btn-info" ngbTooltip="Language will be provided by RAD"
@@ -215,7 +215,7 @@
                 </td>                
               </tr>
               <tr>                
-                <td class="summary_text_level_3" id="LEVIN_GEN" (click)="selectTypeChange($event)">
+                <td class="summary_text_level_3" id="LEVIN_GEN" (click)="selectTypeChange('LEVIN_GEN')">
                   <input type="radio" formControlName="type" value="LEVIN_GEN" placeholder="Generic Campaign Activity">
                   <label for="LEVIN_GEN" class="child-options-label">Generic Campaign Activity</label>
                   <button type="button" class="btn btn-info" ngbTooltip="Language will be provided by RAD"
@@ -226,7 +226,7 @@
                 </td>                
               </tr>
               <tr>                
-                <td class="summary_text_level_3" id="LEVIN_OTH_DISB" (click)="selectTypeChange($event)">
+                <td class="summary_text_level_3" id="LEVIN_OTH_DISB" (click)="selectTypeChange('LEVIN_OTH_DISB')">
                   <input type="radio" formControlName="type" value="LEVIN_OTH_DISB" placeholder="Other Disbursement">
                   <label for="LEVIN_OTH_DISB" class="child-options-label">Other Disbursement</label>
                   <button type="button" class="btn btn-info" ngbTooltip="Language will be provided by RAD"
@@ -258,6 +258,103 @@
       </footer>
     </section>
 
+    <section *ngIf="transactionType === 'LA_SUM'">
+      <ng-container>              
+        <table class="table table-striped table-hover table__sortable">
+          <thead>
+              <tr>
+                  <th [@fadeInOut]>                              
+                  </th>
+                  <th [@fadeInOut]
+                      (click)="changeSortDirection('activity_event_name')">Type
+                      <i class="fa fa-sort" aria-hidden="false"></i>
+                  </th>
+                  <th [@fadeInOut]
+                      (click)="changeSortDirection('activity')">Account Name
+                      <i class="fa fa-sort" aria-hidden="false"></i>
+                  </th>
+                  <th [@fadeInOut]
+                      (click)="changeSortDirection('date')">Name/Organization
+                      <i class="fa fa-sort" aria-hidden="false"></i>
+                  </th>
+                  <th [@fadeInOut]
+                      (click)="changeSortDirection('ratio_code')">Date
+                      <i class="fa fa-sort" aria-hidden="false"></i>
+                  </th>
+                  <th [@fadeInOut]
+                      (click)="changeSortDirection('federal_percent')">Amount
+                      <i class="fa fa-sort" aria-hidden="false"></i>
+                  </th>
+              </tr>
+          </thead>
+          <tbody>
+            <ng-container *ngFor="let item of schedLsModel | paginate: tableConfig">
+                <tr *ngIf="item.memo_code !=='X' || item.arrow_dir ==='show'"
+                  [ngStyle]="{'background-color': item.memo_code !=='X' ? '' : '#D9EDF6'}">
+                  <td>
+                    <input type="checkbox" (click)="checkForMultiChecked($event)">
+                  </td>
+                  <td>
+                    <div class="row td-arrow">
+                      {{ item.tran_desc }}
+                    </div>
+                  </td> 
+                  <td>
+                    <div class="row td-arrow">
+                      {{ item.levin_account_name }}
+                    </div>
+                  </td>
+                  <td>
+                      <div class="row td-arrow">
+                        {{ item.entity_type == 'IND' ?
+                            item.first_name + ' ' + item.last_name :
+                            item.entity_name
+                        }}
+                      <div >
+                        <i *ngIf="item.arrow_dir === 'down'" class="fas fa-angle-down amend-arrow" (click)="clickArrow(item)"></i>
+                        <i *ngIf="item.arrow_dir === 'up'" class="fas fa-angle-up amend-arrow" (click)="clickArrow(item)"></i>
+                      </div>
+                    </div>
+                  </td>
+                  <td>
+                      {{ item.contribution_date != '' ? (item.contribution_date | date: 'MM/dd/yyyy') : (item.expenditure_date | date: 'MM/dd/yyyy')}}
+                  </td>
+                  <td>{{ item.contribution_amount != '' ? (item.contribution_amount | currency:'USD':'symbol-narrow':'1.2-2') : 
+                      (item.expenditure_amount | currency:'USD':'symbol-narrow':'1.2-2')}}</td>
+                  <td>
+                      <div *ngIf="item.memo_code == 'X'"><input type="checkbox" checked onclick="return false;">Memo</div>
+                      <div *ngIf="item.memo_code != 'X'"><input type="checkbox" onclick="return false;">Memo</div>                            
+                  </td>
+
+                  <td class="bulk_action" >
+                      <div [@fadeInOut] class="btn-group" ngbDropdown role="group" aria-label="Action dropdown">
+  
+                          <button class="btn btn-sm btn-primary" ngbDropdownToggle>
+                              <i class="ellipsis-icon"></i>
+                          </button>
+
+                          <div id="sched-h4__dropdown-action" class="dropdown-menu" ngbDropdownMenu>
+                              <button class="dropdown-item" (click)="editTransaction(item)">
+                                  <i class="fas fa-edit"></i> Edit
+                              </button>
+                              <button class="dropdown-item">
+                                  <i class="fas fa-print"></i> Print
+                              </button>
+                              <button class="dropdown-item"><i class="fas fa-copy"></i> Clone</button>
+                              <button class="dropdown-item">
+                                  <i class="fas fa-trash"></i> Trash
+                              </button>
+                          </div>
+                      </div>
+                  </td>
+                  
+              </tr>
+            </ng-container>
+        </tbody>
+
+        </table>
+        </ng-container>
+    </section>
     
     
   </form>
