--- a/front-end/src/app/forms/sched-h3/sched-h3.component.html
+++ b/front-end/src/app/forms/sched-h3/sched-h3.component.html
@@ -335,7 +335,7 @@
 
                       <div id="forms__trx-dropdown-action1" ngbDropdownToggle class="dropdown-menu" ngbDropdownMenu>
                         <button class="dropdown-item" (click)="editH3Sub(item)"><i class="fas fa-edit"></i> Edit</button>
-                        <button class="dropdown-item" (click)="trashH3(item)">
+                        <button class="dropdown-item" (click)="trashSubTransaction(item)">
                           <i class="fas fa-trash"></i> Trash
                         </button>
                       </div>
@@ -437,7 +437,7 @@
               <td>{{ item.receipt_date | date: 'MM/dd/yyyy' }}</td>
               <td class="summary_text_amt">{{ item.transferred_amount | currency: 'USD':'symbol-narrow':'1.2-2' }}</td>
               <td class="summary_text_amt">
-                {{ item.aggregate_amount | currency: 'USD':'symbol-narrow':'1.2-2' }}
+                {{ item.aggregate_amount === 0 ? '' : (item.aggregate_amount | currency: 'USD':'symbol-narrow':'1.2-2') }}
               </td>
 
               <td class="bulk_action">
