h's summary page trash action &  h4/h6's clone action

--- a/front-end/src/app/forms/sched-h2/sched-h2.component.html
+++ b/front-end/src/app/forms/sched-h2/sched-h2.component.html
@@ -372,8 +372,7 @@
                       <div id="sched-h2__dropdown-action" ngbDropdownToggle class="dropdown-menu" ngbDropdownMenu>
                         <button class="dropdown-item" (click)="editH2(item)"><i class="fas fa-edit"></i> Edit</button>
                         <button class="dropdown-item"><i class="fas fa-print"></i> Print</button>
-                        <button class="dropdown-item" (click)="cloneH2(item)"><i class="fas fa-copy"></i> Clone</button>
-                        <button class="dropdown-item"><i class="fas fa-trash"></i> Trash</button>
+                        <button class="dropdown-item" (click)="trashTransaction(item)"><i class="fas fa-trash"></i> Trash</button>
                       </div>
                     </div>
                   </td>
