--- a/front-end/src/app/forms/sched-h6/sched-h6.component.html
+++ b/front-end/src/app/forms/sched-h6/sched-h6.component.html
@@ -207,10 +207,8 @@
                                     <button class="dropdown-item">
                                         <i class="fas fa-print"></i> Print
                                     </button>
-                                    <button class="dropdown-item"><i class="fas fa-copy"></i> Clone</button>
-                                    <button class="dropdown-item">
-                                        <i class="fas fa-trash"></i> Trash
-                                    </button>
+                                    <button class="dropdown-item" (click)="cloneTransaction(item)"><i class="fas fa-copy"></i> Clone</button>
+                                    <button class="dropdown-item" (click)="trashTransaction(item)"><i class="fas fa-trash" ></i> Trash</button>
                                 </div>
                             </div>
                         </td>
