Disable focus first

--- a/front-end/src/app/contacts/addnew/addnew_contacts.component.html
+++ b/front-end/src/app/contacts/addnew/addnew_contacts.component.html
@@ -109,6 +109,7 @@
                       "
                       id="typeahead-template-last-name"
                       [ngbTypeahead]="searchLastName"
+                      [focusFirst]=false
                       [resultTemplate]="rt"
                       [inputFormatter]="formatterLastName"
                       (selectItem)="handleSelectedItem($event)"
