--- a/front-end/src/app/forms/sched-d/debt-summary/debt-summary.component.html
+++ b/front-end/src/app/forms/sched-d/debt-summary/debt-summary.component.html
@@ -3,9 +3,7 @@
   <br />
 </div>
 <div class="debtSumamry__table-container">
-  <div class="grid-row float-right debtSumamry__page-item-range">
-    <!-- <div class="float-right debtSumamry__item-range">{{ determineItemRange() }} of {{ debtModel?.length }}</div> -->
-  </div>
+  <div class="grid-row float-right debtSumamry__page-item-range"></div>
   <table class="table table-striped table-hover table__sortable debtSumamry__table">
     <thead>
       <tr>
@@ -15,9 +13,6 @@
         <th [class]="getSortClass('name')" (click)="changeSortDirection('name')">
           Name
         </th>
-        <!-- <th [class]="getSortClass('paymentDate')" (click)="changeSortDirection('paymentDate')">
-          Date
-        </th> -->
         <th [class]="getSortClass('beginningBalance')" (click)="changeSortDirection('beginningBalance')">
           Beginning Balance<br />(for this period)
         </th>
@@ -30,7 +25,6 @@
         <th [class]="getSortClass('closingBalance')" (click)="changeSortDirection('closingBalance')">
           Balance At Close<br />(for this period)
         </th>
-
         <th class="bulk_action">
           <div class="btn-group" ngbDropdown role="group" aria-label="Action dropdown">
             <button
@@ -59,9 +53,6 @@
           <td>
             {{ debt.name }}
           </td>
-          <!-- <td>
-            {{ debt.paymentDate | date: 'MM/dd/yyyy' }}
-          </td> -->
           <td>
             {{ debt.beginningBalance | currency: 'USD':'symbol-narrow':'1.2-2' }}
           </td>
