--- a/front-end/src/app/forms/sched-h2/sched-h2.component.scss
+++ b/front-end/src/app/forms/sched-h2/sched-h2.component.scss
@@ -243,6 +243,10 @@
   .dropdown-menu {
     min-width: 6em;
   }
+
+  .radio_gray {
+    color: #808080;
+  }
 /*
 .dropdown-menu {
   min-width: 0px !important;
