--- a/front-end/src/app/forms/sched-l/sched-l.component.html
+++ b/front-end/src/app/forms/sched-l/sched-l.component.html
@@ -356,6 +356,330 @@
         </ng-container>
     </section>
     
+    <div class="financial-summary-container">
+      <section *ngIf="transactionType === 'L_SUM'">
+        <div class="financial-summary-content">
+          <div class="row">
+            <div class="tab-container" [ngSwitch]="viewMode">
+              <div id="tab1" *ngSwitchDefault>
+          <!--<ng-container>-->
+                <table class="summary_table_text">
+                  <tbody class="summary_text">
+                      <tr>
+                        <td width=50%>
+                          <div class="summary_text_level_1" >
+                            1. RECEIPTS
+                          </div>
+                        </td>
+                        <td width=25%>
+                          <div class="summary_text_amt_level_1" >
+                            Current Period
+                          </div>
+                        </td>
+                        <td width=25%>
+                          <div class="summary_text_amt_level_1" >
+                            Calendar Year-to-Date
+                          </div>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="summary_text_level_3" >
+                              1a. Itemized Receipts From Persons
+                          </div>
+                        </td>
+                        <td>
+                          <div class="summary_text_amt_level_3" >
+                            {{ lSum.itemized_receipt_amount | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                        <td>
+                          <div class="summary_text_amt_level_3" >
+                              {{ lSum.itemized_receipt_amount_ytd | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="summary_text_level_3" >
+                              1b. Unitemized Receipts From Persons
+                          </div>
+                        </td>
+                        <td>
+                          <div class="summary_text_amt_level_3" >
+                            {{ lSum.non_itemized_receipt_amount | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                        <td>
+                          <div class="summary_text_amt_level_3" >
+                              {{ lSum.non_itemized_receipt_amount_ytd | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="summary_text_level_3" >
+                              1c. Total Receipts From Persons
+                          </div>
+                        </td>
+                        <td>
+                          <div class="summary_text_amt_level_3" >
+                            {{ lSum.total_receipt_amount | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                        <td>
+                          <div class="summary_text_amt_level_3" >
+                              {{ lSum.total_receipt_amount_ytd | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="summary_text_level_2" >
+                              2. OTHER RECEIPTS
+                          </div>
+                        </td>
+                        <td>
+                          <div class="summary_text_amt_level_2" >
+                            {{ lSum.other_sl_receipt_amount | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                        <td>
+                          <div class="summary_text_amt_level_2" >
+                              {{ lSum.other_sl_receipt_amount_ytd | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="summary_text_level_1" >
+                              3. TOTAL RECEIPTS
+                          </div>
+                        </td>
+                        <td>
+                          <div class="summary_text_amt_level_1" >
+                            {{ lSum.total_receipt_amount | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                        <td>
+                          <div class="summary_text_amt_level_1" >
+                              {{ lSum.total_receipt_amount_ytd | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="summary_text_level_2" >
+                              4. TRANSFERS TO FEDERAL OR ALLOCATION ACCOUNT
+                          </div>
+                        </td>
+                        <td>
+                          <div class="summary_text_amt_level_2" >
+                            &nbsp;
+                          </div>
+                        </td>  
+                        <td>
+                          <div class="summary_text_amt_level_2" >
+                              &nbsp;
+                          </div>
+                        </td>  
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="summary_text_level_3" >
+                              4(a) Voter Registration DISBURSEMENTS
+                          </div>
+                        </td>
+                        <td>
+                          <div class="summary_text_amt_level_3" >
+                            {{ lSum.voter_registration_disbursement | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                        <td>
+                          <div class="summary_text_amt_level_3" >
+                              {{ lSum.voter_registration_disbursement_ytd | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="summary_text_level_3" >
+                              4(b) Voter ID DISBURSEMENTS
+                          </div>
+                        </td>
+                        <td>
+                          <div class="summary_text_amt_level_3" >
+                            {{ lSum.voter_ID_disbursement | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                        <td>
+                          <div class="summary_text_amt_level_3" >
+                              {{ lSum.voter_ID_disbursement | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="summary_text_level_3" >
+                              4(c). GOTV DISBURSEMENTS
+                          </div>
+                        </td>
+                        <td>
+                          <div class="summary_text_amt_level_3" >
+                            {{ lSum.GOTV_disbursement | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                        <td>
+                          <div class="summary_text_amt_level_3" >
+                              {{ lSum.GOTV_disbursement_ytd | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="summary_text_level_3" >
+                              4(d). Generic Campaign DISBURSEMENTS
+                          </div>
+                        </td>
+                        <td>
+                          <div class="summary_text_amt_level_3" >
+                            {{ lSum.generic_campaign_disbursement | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                        <td>
+                          <div class="summary_text_amt_level_3" >
+                              {{ lSum.generic_campaign_disbursement_ytd | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="summary_text_level_1" >
+                              4(e). Line 4 TOTAL
+                          </div>
+                        </td>
+                        <td>
+                          <div class="summary_text_amt_level_1" >
+                            {{ lSum.total_disbursement_amount | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                        <td>
+                          <div class="summary_text_amt_level_1" >
+                              {{ lSum.total_disbursement_amount_ytd | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="summary_text_level_2" >
+                              5. OTHER DISBURSEMENTS
+                          </div>
+                        </td>
+                        <td>
+                          <div class="summary_text_amt_level_2" >
+                            {{ lSum.other_disbursement | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                        <td>
+                          <div class="summary_text_amt_level_2" >
+                              {{ lSum.other_disbursement_ytd | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="summary_text_level_3" >
+                              7. CASH ON HAND (Beginning)
+                          </div>
+                        </td>
+                        <td>
+                          <div class="summary_text_amt_level_3" >
+                            {{ lSum.coh_bop_report | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                        <td>
+                          <div class="summary_text_amt_level_3" >
+                              {{ lSum.coh_bop_ytd | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="summary_text_level_3" >
+                              8. RECEIPTS
+                          </div>
+                        </td>
+                        <td>
+                          <div class="summary_text_amt_level_3" >
+                            {{ lSum.total_receipt_amount | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                        <td>
+                          <div class="summary_text_amt_level_3" >
+                              {{ lSum.total_receipt_amount_ytd | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="summary_text_level_3" >
+                              9. SUBTOTAL
+                          </div>
+                        </td>
+                        <td>
+                          <div class="summary_text_amt_level_3" >
+                            {{ lSum.line4_subtotal | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                        <td>
+                          <div class="summary_text_amt_level_3" >
+                              {{ lSum.line4_subtotal_ytd | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="summary_text_level_3" >
+                              10. DISBURSEMENTS
+                          </div>
+                        </td>
+                        <td>
+                          <div class="summary_text_amt_level_3" >
+                            {{ lSum.total_disbursement_amount | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                        <td>
+                          <div class="summary_text_amt_level_3" >
+                              {{ lSum.total_disbursement_amount_ytd | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="summary_text_level_2" >
+                              11. ENDING CASH ON HAND
+                          </div>
+                        </td>
+                        <td>
+                          <div class="summary_text_amt_level_2" >
+                            {{ lSum.coh_cop_report | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                        <td>
+                          <div class="summary_text_amt_level_2" >
+                              {{ lSum.coh_cop_ytd | currency:'USD':'symbol-narrow':'1.2-2'}}
+                          </div>
+                        </td>  
+                      </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      <!--</ng-container>-->
+    </section>
+  </div>
     
   </form>
 </div>
