--- a/front-end/src/app/forms/sched-c/endorser/endorser.component.html
+++ b/front-end/src/app/forms/sched-c/endorser/endorser.component.html
@@ -107,6 +107,7 @@
                       "
                       id="typeahead-template-last-name"
                       [ngbTypeahead]="searchLastName"
+                      [focusFirst]=false
                       [resultTemplate]="rt"
                       [inputFormatter]="formatterLastName"
                       (selectItem)="handleSelectedItem($event)"
@@ -129,6 +130,7 @@
                       "
                       id="typeahead-template-first-name"
                       [ngbTypeahead]="searchFirstName"
+                      [focusFirst]=false
                       [resultTemplate]="rt"
                       [inputFormatter]="formatterFirstName"
                       (selectItem)="handleSelectedItem($event)"
@@ -152,6 +154,7 @@
                     "
                     id="typeahead-template-entity-name"
                     [ngbTypeahead]="searchOrg"
+                    [focusFirst]=false
                     [resultTemplate]="rtOrg"
                     [inputFormatter]="formatterOrgName"
                     (selectItem)="handleSelectedOrgItem($event)"
