update summary button text and function for h2-h6 & update h2 edit subscibe condition

--- a/front-end/src/app/forms/sched-h5/sched-h5.component.html
+++ b/front-end/src/app/forms/sched-h5/sched-h5.component.html
@@ -288,8 +288,8 @@
                 <button class="btn btn-previous btn-left" type="button" (click)="clearFormValues(); previousStep()">
                   Previous
                 </button>
-                <a class="btn btn-primary btn-right" (click)="returnToSum()">
-                  View Summary
+                <a class="btn btn-primary btn-right" (click)="goSummary()">
+                  Summary
                 </a>
               </div>
               <div *ngIf="scheduleAction === editScheduleAction">
