Fix Style changes (#1763)

--- a/front-end/src/app/forms/sched-l/sched-l.component.scss
+++ b/front-end/src/app/forms/sched-l/sched-l.component.scss
@@ -1,5 +1,5 @@
 @import '../../shared/scss/global';
-@import '../../forms/form-3x/financial-summary/financial-summary.component.scss';
+// @import '../../forms/form-3x/financial-summary/financial-summary.component.scss';
 
 .sched-l-container {
   padding-right: 10px;
